versioned_docs/version-2.8/reference/targets/pex_binary.mdx
---
title: pex_binary
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A Python target that can be converted into an executable PEX file.

PEX files are self-contained executable files that contain a complete Python environment capable of running the target. For more information, see https://www.pantsbuild.org/v2.8/docs/pex-files.

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeoutput_pathcode}
</div>

## `output_path`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Where the built asset should be located.

If undefined, this will use the path to the BUILD file, followed by the target name. For example, `src/python/project:app` would be `src.python.project/app.ext.

When running `./pants package`, this path will be prefixed by `--distdir` (e.g. `dist/`).

Warning: setting this value risks naming collisions with other package targets you may have.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeinterpreter_constraintscode}
</div>

## `interpreter_constraints`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The Python interpreters this code is compatible with.

Each element should be written in pip-style format, e.g. `CPython==2.7.*` or `CPython>=3.6,<4`. You can leave off `CPython` as a shorthand, e.g. `>=2.7` will be expanded to `CPython>=2.7`.

Specify more than one element to OR the constraints, e.g. `['PyPy==3.7.*', 'CPython==3.7.*']` means either PyPy 3.7 _or_ CPython 3.7.

If the field is not set, it will default to the option `[python].interpreter_constraints`.

See https://www.pantsbuild.org/v2.8/docs/python-interpreter-compatibility for how these interpreter constraints are merged with the constraints of dependencies.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeexperimental_resolvecode}
</div>

## `experimental_resolve`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The resolve from `[python].experimental_resolves_to_lockfiles` to use, if any.

This field is highly experimental and may change without the normal deprecation policy.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedependenciescode}
</div>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;].

Alternatively, you may include file names. Pants will find which target owns that file, and create a new target from that which only includes the file in its `sources` field. For files relative to the current BUILD file, prefix with `./`; otherwise, put the full path, e.g. [&#x27;./sibling.txt&#x27;, &#x27;resources/demo.json&#x27;].

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeentry_pointcode}
</div>

## `entry_point`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Set the entry point, i.e. what gets run when executing `./my_app.pex`, to a module.

You can specify a full module like &#x27;path.to.module&#x27; and &#x27;path.to.module:func&#x27;, or use a shorthand to specify a file name, using the same syntax as the `sources` field:

1. &#x27;app.py&#x27;, Pants will convert into the module `path.to.app`;
2. &#x27;app.py:func&#x27;, Pants will convert into `path.to.app:func`.

You must use the file name shorthand for file arguments to work with this target.

You may either set this field or the `script` field, but not both. Leave off both fields to have no entry point.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codescriptcode}
</div>

## `script`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Set the entry point, i.e. what gets run when executing `./my_app.pex`, to a script or console_script as defined by any of the distributions in the PEX.

You may either set this field or the `entry_point` field, but not both. Leave off both fields to have no entry point.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeplatformscode}
</div>

## `platforms`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The platforms the built PEX should be compatible with.

This defaults to the current platform, but can be overridden to different platforms. There must be built wheels available for all of the foreign platforms, rather than sdists.

You can give a list of multiple platforms to create a multiplatform PEX, meaning that the PEX will be executable in all of the supported environments.

Platforms should be in the format defined by Pex (https://pex.readthedocs.io/en/latest/buildingpex.html#platform), i.e. PLATFORM-IMPL-PYVER-ABI (e.g. &#x22;linux_x86_64-cp-27-cp27mu&#x22;, &#x22;macosx_10.12_x86_64-cp-36-cp36m&#x22;):

- PLATFORM: the host platform, e.g. &#x22;linux-x86_64&#x22;, &#x22;macosx-10.12-x86_64&#x22;.
- IMPL: the Python implementation abbreviation, e.g. &#x22;cp&#x22;, &#x22;pp&#x22;, &#x22;jp&#x22;.
- PYVER: a two-digit string representing the Python version, e.g. &#x22;27&#x22;, &#x22;36&#x22;.
- ABI: the ABI tag, e.g. &#x22;cp36m&#x22;, &#x22;cp27mu&#x22;, &#x22;abi3&#x22;, &#x22;none&#x22;.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeinherit_pathcode}
</div>

## `inherit_path`

<Field
    type_repr={`'fallback' | 'false' | 'prefer' | None`}
    default_repr={`None`}
>

Whether to inherit the `sys.path` (aka PYTHONPATH) of the environment that the binary runs in.

Use `false` to not inherit `sys.path`; use `fallback` to inherit `sys.path` after packaged dependencies; and use `prefer` to inherit `sys.path` before packaged dependencies.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codestrip_pex_envcode}
</div>

## `strip_pex_env`

<Field
    type_repr={`bool`}
    default_repr={`True`}
>

Whether or not to strip the PEX runtime environment of `PEX*` environment variables.

Most applications have no need for the `PEX*` environment variables that are used to control PEX startup; so these variables are scrubbed from the environment by Pex before transferring control to the application by default. This prevents any subprocesses that happen to execute other PEX files from inheriting these control knob values since most would be undesired; e.g.: PEX_MODULE or PEX_PATH.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeignore_errorscode}
</div>

## `ignore_errors`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

Should PEX ignore when it cannot resolve dependencies?

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeshebangcode}
</div>

## `shebang`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Set the generated PEX to use this shebang, rather than the default of PEX choosing a shebang based on the interpreter constraints.

This influences the behavior of running `./result.pex`. You can ignore the shebang by instead running `/path/to/python_interpreter ./result.pex`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeemit_warningscode}
</div>

## `emit_warnings`

<Field
    type_repr={`bool | None`}
    default_repr={`None`}
>

Whether or not to emit PEX warnings at runtime.

The default is determined by the option `emit_warnings` in the `[pex-binary-defaults]` scope.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeexecution_modecode}
</div>

## `execution_mode`

<Field
    type_repr={`'unzip' | 'venv' | 'zipapp' | None`}
    default_repr={`'zipapp'`}
>

The mode the generated PEX file will run in.

The traditional PEX file runs in a modified &#x27;zipapp&#x27; mode (See: https://www.python.org/dev/peps/pep-0441/) where zipped internal code and dependencies are first unpacked to disk. This mode achieves the fastest cold start times and may, for example be the best choice for cloud lambda functions.

The fastest execution mode in the steady state is &#x27;venv&#x27;, which generates a virtual environment from the PEX file on first run, but then achieves near native virtual environment start times. This mode also benefits from a traditional virtual environment `sys.path`, giving maximum compatibility with stdlib and third party APIs.

The &#x27;unzip&#x27; mode is deprecated since the default &#x27;zipapp&#x27; mode now executes this way.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeinclude_toolscode}
</div>

## `include_tools`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

Whether to include Pex tools in the PEX bootstrap code.

With tools included, the generated PEX file can be executed with `PEX_TOOLS=1 <pex file> --help` to gain access to all the available tools.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderestartablecode}
</div>

## `restartable`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, runs of this target with the `run` goal may be interrupted and restarted when its input files change.

</Field>

</span>
